# cpp-simple-project

./: CMakeLists.txt  README.md
include/myproject/: bar.h  foo.h
src/: bar.cpp
src/cli/: main.cpp
